Updating promotion