@@ -3,8 +3,7 @@ package chess;
 import boardgame.Board;
 import boardgame.Piece;
 import boardgame.Position;
-import chess.pieces.King;
-import chess.pieces.Rook;
+import chess.pieces.*;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -17,6 +16,8 @@ public class ChessMatch {
     private Color currentPlayer;
     private boolean check;
     private boolean checkMate;
+    private ChessPiece enPassantVulnerable;
+    private ChessPiece promoted;
 
     private List<ChessPiece> piecesOnTheBoard = new ArrayList<>();
     private List <ChessPiece> capturedPieces = new ArrayList<>();
@@ -32,6 +33,10 @@ public class ChessMatch {
         return turn;
     }
 
+    public ChessPiece getPromoted() {
+        return promoted;
+    }
+
     public Color getCurrentPlayer() {
         return currentPlayer;
     }
@@ -41,6 +46,9 @@ public class ChessMatch {
     }
     public boolean getCheckMate() {
         return checkMate;
+    }
+    public ChessPiece getEnPassantVulnerable() {
+        return enPassantVulnerable;
     }
 
     public void nextTurn() {
@@ -66,18 +74,41 @@ public class ChessMatch {
         validateTargetPosition(sourcePosition, targetPosition);
         Piece capturedPiece = makeMove(sourcePosition, targetPosition);
 
+
+
         if (testCheck(currentPlayer)) {
             undoMove(sourcePosition, targetPosition, capturedPiece);
             throw new ChessException("You cannot put yourself in check.");
         }
+        ChessPiece movedPiece = (ChessPiece) board.piece(targetPosition);
 
-        check = (testCheck(getOpponentColor(currentPlayer))) ? false : true;
+        // Promotion
+        promoted = null;
+        if (movedPiece instanceof Pawn) {
+            if ((movedPiece.getColor() == Color.WHITE && targetPosition.getRow() == 0) ||
+                (movedPiece.getColor() == Color.BLACK && targetPosition.getRow() == 7)) {
+                promoted = (ChessPiece) board.piece(targetPosition);
+                promoted = replacePromotedPiece("Q"); // Default promotion to Queen
+
+            }
+        }
+
+        check = (testCheck(getOpponentColor(currentPlayer))) ? true : false;
 
         if (testCheckMate(getOpponentColor(currentPlayer))) {
             checkMate = true;
         } else {
             nextTurn();
         }
+
+        // Special move: en passant
+        if (movedPiece instanceof Pawn &&
+            (targetPosition.getRow() == sourcePosition.getRow() - 2 || targetPosition.getRow() == sourcePosition.getRow() + 2)) {
+            enPassantVulnerable = movedPiece;
+        } else {
+            enPassantVulnerable = null; // Reset en passant vulnerability
+        }
+
         return (ChessPiece) capturedPiece;
     }
 
@@ -91,6 +122,37 @@ public class ChessMatch {
             piecesOnTheBoard.remove(capturedPiece);
             capturedPieces.add((ChessPiece) capturedPiece);
         }
+
+        // Special move: castling
+        if (p instanceof King && targetPosition.getColumn() == sourcePosition.getColumn() + 2) {
+            Position rookSourcePosition = new Position(sourcePosition.getRow(), sourcePosition.getColumn() + 3);
+            Position rookTargetPosition = new Position(sourcePosition.getRow(), sourcePosition.getColumn() + 1);
+            ChessPiece rook = (ChessPiece) board.removePiece(rookSourcePosition);
+            rook.increaseMoveCount();
+            board.placePiece(rook, rookTargetPosition);
+        } else if (p instanceof King && targetPosition.getColumn() == sourcePosition.getColumn() - 2) {
+            Position rookSourcePosition = new Position(sourcePosition.getRow(), sourcePosition.getColumn() - 4);
+            Position rookTargetPosition = new Position(sourcePosition.getRow(), sourcePosition.getColumn() - 1);
+            ChessPiece rook = (ChessPiece) board.removePiece(rookSourcePosition);
+            rook.increaseMoveCount();
+            board.placePiece(rook, rookTargetPosition);
+        }
+
+        // Special move: en passant
+        if (p instanceof Pawn) {
+            if (sourcePosition.getColumn() != targetPosition.getColumn() && capturedPiece == null) {
+                Position pawnPosition;
+                if (p.getColor() == Color.WHITE) {
+                    pawnPosition = new Position(targetPosition.getRow() + 1, targetPosition.getColumn());
+                } else {
+                    pawnPosition = new Position(targetPosition.getRow() - 1, targetPosition.getColumn());
+                }
+                capturedPiece = board.removePiece(pawnPosition);
+                capturedPieces.add((ChessPiece) capturedPiece);
+                piecesOnTheBoard.remove(capturedPiece);
+            }
+        }
+
         return capturedPiece;
     }
 
@@ -102,6 +164,36 @@ public class ChessMatch {
             board.placePiece(capturedPiece, targetPosition);
             capturedPieces.remove(capturedPiece);
             piecesOnTheBoard.add((ChessPiece) capturedPiece);
+        }
+
+        // Special move: castling
+        if (p instanceof King && targetPosition.getColumn() == sourcePosition.getColumn() + 2) {
+            Position rookSourcePosition = new Position(sourcePosition.getRow(), sourcePosition.getColumn() + 1);
+            Position rookTargetPosition = new Position(sourcePosition.getRow(), sourcePosition.getColumn() + 3);
+            ChessPiece rook = (ChessPiece) board.removePiece(rookSourcePosition);
+            rook.decreaseMoveCount();
+            board.placePiece(rook, rookTargetPosition);
+        } else if (p instanceof King && targetPosition.getColumn() == sourcePosition.getColumn() - 2) {
+            Position rookSourcePosition = new Position(sourcePosition.getRow(), sourcePosition.getColumn() - 1);
+            Position rookTargetPosition = new Position(sourcePosition.getRow(), sourcePosition.getColumn() - 4);
+            ChessPiece rook = (ChessPiece) board.removePiece(rookSourcePosition);
+            rook.decreaseMoveCount();
+            board.placePiece(rook, rookTargetPosition);
+        }
+
+        // Special move: en passant
+        if (p instanceof Pawn) {
+            if (sourcePosition.getColumn() != targetPosition.getColumn() && capturedPiece == null) {
+                ChessPiece pawn = (ChessPiece) board.removePiece(targetPosition);
+                Position pawnPosition;
+                if (p.getColor() == Color.WHITE) {
+                    pawnPosition = new Position(3, targetPosition.getColumn());
+                } else {
+                    pawnPosition = new Position(4, targetPosition.getColumn());
+                }
+                board.placePiece(pawn, pawnPosition);
+
+            }
         }
     }
 
@@ -147,16 +239,14 @@ public class ChessMatch {
 
     private boolean testCheck(Color color) {
         Position kingPosition = king(color).getChessPosition().toPosition();
-        List<ChessPiece> opponentPieces = piecesOnTheBoard.stream()
-                .filter(x -> x.getColor() == getOpponentColor(color))
-                .toList();
-        for (ChessPiece piece : opponentPieces) {
-            boolean[][] possibleMoves = piece.possibleMoves();
-            if (possibleMoves[kingPosition.getRow()][kingPosition.getColumn()]) {
-                return true; // The king is in check
+        List<Piece> opponentPieces = piecesOnTheBoard.stream().filter(x -> ((ChessPiece)x).getColor() == getOpponentColor(color)).collect(Collectors.toList());
+        for (Piece p : opponentPieces) {
+            boolean[][] mat = p.possibleMoves();
+            if (mat[kingPosition.getRow()][kingPosition.getColumn()]) {
+                return true;
             }
         }
-        return false; // The king is safe
+        return false;
     }
 
     private boolean testCheckMate(Color color) {
@@ -191,14 +281,70 @@ public class ChessMatch {
         piecesOnTheBoard.add(piece);
     }
 
+    public ChessPiece replacePromotedPiece(String type) {
+        if (promoted == null) {
+            throw new ChessException("There is no piece to be promoted.");
+        }
+
+        if (!type.equals("B") && !type.equals("N") && !type.equals("R") && !type.equals("Q")) {
+            return promoted; // Default to Queen if invalid type
+        }
+        Position pos = promoted.getChessPosition().toPosition();
+        Piece p =board.removePiece(pos);
+        piecesOnTheBoard.remove(p);
+
+        ChessPiece newPiece = newPiece(type, promoted.getColor());
+        board.placePiece(newPiece, pos);
+        piecesOnTheBoard.add(newPiece);
+
+        return newPiece;
+
+    }
+
+    private ChessPiece newPiece(String type, Color color) {
+        if (type.equals("B")) return new Bishop(board, color);
+        if (type.equals("N")) return new Knight(board, color);
+        if (type.equals("R")) return new Rook(board, color);
+        if (type.equals("Q")) return new Queen(board, color);
+        return new Queen(board, color);
+    }
+
     private void initialSetup() {
         // Initial setup of the chess pieces on the board
-        placeNewPiece('h', 7, new Rook( board,Color.WHITE));
-        placeNewPiece('d', 1, new Rook( board,Color.WHITE));
-        placeNewPiece('e', 1, new King( board,Color.WHITE));
+        placeNewPiece('a', 1, new Rook(board, Color.WHITE));
+        placeNewPiece('b', 1, new Knight(board, Color.WHITE));
+        placeNewPiece('c', 1, new Bishop(board, Color.WHITE));
+        placeNewPiece('d', 1, new Queen(board, Color.WHITE));
+        placeNewPiece('e', 1, new King(board, Color.WHITE, this));
+        placeNewPiece('f', 1, new Bishop(board, Color.WHITE));
+        placeNewPiece('g', 1, new Knight(board, Color.WHITE));
+        placeNewPiece('h', 1, new Rook(board, Color.WHITE));
+        placeNewPiece('a', 2, new Pawn(board, Color.WHITE, this));
+        placeNewPiece('b', 2, new Pawn(board, Color.WHITE, this));
+        placeNewPiece('c', 2, new Pawn(board, Color.WHITE, this));
+        placeNewPiece('d', 2, new Pawn(board, Color.WHITE, this));
+        placeNewPiece('e', 2, new Pawn(board, Color.WHITE, this));
+        placeNewPiece('f', 2, new Pawn(board, Color.WHITE, this));
+        placeNewPiece('g', 2, new Pawn(board, Color.WHITE, this));
+        placeNewPiece('h', 2, new Pawn(board, Color.WHITE, this));
 
-        placeNewPiece('a', 8, new Rook( board,Color.BLACK));
-        placeNewPiece('b', 8, new King( board,Color.BLACK));
+        placeNewPiece('a', 8, new Rook(board, Color.BLACK));
+        placeNewPiece('b', 8, new Knight(board, Color.BLACK));
+        placeNewPiece('c', 8, new Bishop(board, Color.BLACK));
+        placeNewPiece('d', 8, new Queen(board, Color.BLACK));
+        placeNewPiece('e', 8, new King(board, Color.BLACK, this));
+        placeNewPiece('f', 8, new Bishop(board, Color.BLACK));
+        placeNewPiece('g', 8, new Knight(board, Color.BLACK));
+        placeNewPiece('h', 8, new Rook(board, Color.BLACK));
+        placeNewPiece('a', 7, new Pawn(board, Color.BLACK, this));
+        placeNewPiece('b', 7, new Pawn(board, Color.BLACK, this));
+        placeNewPiece('c', 7, new Pawn(board, Color.BLACK, this));
+        placeNewPiece('d', 7, new Pawn(board, Color.BLACK, this));
+        placeNewPiece('e', 7, new Pawn(board, Color.BLACK, this));
+        placeNewPiece('f', 7, new Pawn(board, Color.BLACK, this));
+        placeNewPiece('g', 7, new Pawn(board, Color.BLACK, this));
+        placeNewPiece('h', 7, new Pawn(board, Color.BLACK, this));
+
 
     }
 
